DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Jan-31-2005 patrickh    Separated the builds for VR Juggler and VRJConfig.

[2.0 Beta 2 released - 1.18.2005]==============================================
Jan-18-2005 patrickh    NEW VERSION: 1.1.167
Jan-11-2005 patrickh    Added a VRJConfig custom editor for flock config
                        elements.
Jan-09-2005 patrickh    Added a VRJConfig custom editor for motion_star config
                        elements.

[2.0 Beta 1 released - 12.24.2004]=============================================
Dec-23-2004 patrickh    NEW VERSION: 1.1.166
Dec-22-2004 allenb      Added proof of concept code showing graphical display
                        of performance data from the Kernel.
                        Added performance collection to the kernel loop.
Dec-22-2004 allenb      Make Kernel::getThread() return a vpr::Thread*.
                        NEW VERSION: 1.1.165
Dec-20-2004 dshipton    OpenSG's callback for getSceneRoot has been changed to
                        getScene() to be in sync with Pf and OSG.
Dec-01-2004 patrickh    Updated to require Gadgeteer 0.21.0.
                        NEW VERSION: 1.1.164
Nov-30-2004 patrickh    Updated to take advantage of .jdef file format
                        extensions added in JCCL 0.24.0.
                        NEW VERSION: 1.1.163
Nov-26-2004 patrickh    Renamed the config element type sound_manager to
                        sound_manager_sonix.
Nov-18-2004 patrickh    Updated to require Sonix 0.5.0.
Nov-13-2004 patrickh    Updated to require Gadgeteer 0.20.0.
                        NEW VERSION: 1.1.162
Nov-05-2004 patrickh    VRJConfig is now installed as a bundle on Mac OS X (in
                        addition to the "traditional" UNIX installation
                        launched by a shell script).
Nov-04-2004 patrickh    Relocated the Java libraries and JavaBeans used by